forEnersys/DavePkg/objects/Ship_To_Data__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Data (ship from Account)</relationshipLabel>
        <relationshipName>Ship_To_Data_sa</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Distribution_Channel_Code__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Distribution_Channel_Code__c</formula>
        <label>Distribution Channel Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division_Code__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Division_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Function_Type_Code__c</fullName>
        <label>Partner Function Type Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Customer_Id__c</fullName>
        <formula>Sales_Area_Data__r.Account__r.SAP_Customer_Id__c</formula>
        <label>SAP Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Area_Data__c</fullName>
        <label>Sales Area Data</label>
        <referenceTo>Sales_Area_data__c</referenceTo>
        <relationshipLabel>Ship To Data</relationshipLabel>
        <relationshipName>Ship_To_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Organisation_Code__c</fullName>
        <formula>Sales_Area_Data__r.Sales_Area_Sales_Organisation_Code__r.Name</formula>
        <label>Sales Organisation Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account_Name__c</fullName>
        <formula>Ship_To_Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <label>Ship To Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Data</relationshipLabel>
        <relationshipName>Ship_To_Data</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ship_from_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship from Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Ship To Data (ship from Account)</relationshipLabel>
        <relationshipName>Ship_To_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Ship To Data</label>
    <nameField>
        <displayFormat>ST-{00000}</displayFormat>
        <label>Ship To Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ship To Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>